# reading-impact-model

./: LICENCE  README.md  alpino_matcher.py  impact_model-en-0.1.pcl  impact_model-en-1.0.pcl  impact_model-en.pcl  impact_model-nl.json  impact_model-nl.pcl  impact_model.py  matcher.py  pyproject.toml  reading_impact.py
docs/: examples.md  impact.md
reading_impact_model/: alpino_matcher.py  alpinor_matcher_old.py  impact_model.py  reading_impact.py
reading_impact_model/matchers/: alpino_matcher.py  alpinor_matcher_old.py  matcher.py  nltk_matcher.py  spacy_matcher.py  stanza_matcher.py  trankit_matcher.py
reading_impact_model/model/: phrase.py
reading_impact_model/models/: impact_model-en-0.3.pcl  impact_model-en-0.4.pcl  impact_model-en-0.5.pcl  impact_model-en-0.6.pcl  impact_model-en-0.7.json  impact_model-en-0.7.pcl  impact_model-en.json  impact_model_en.py  impact_model_nl.py
tests/: test_impact_model.py  test_matcher.py  test_spacy_matcher.py
tests/test_data/: data_test_model.json  data_test_model_invalid.json
