[tool.poetry]
name = "reading-impact-model"
version = "0.1.0"
description = ""
authors = ["Marijn Koolen <marijn.koolen@gmail.com>"]
license = "MIT"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/marijnkoolen/reading-impact-model"
repository = "https://github.com/marijnkoolen/reading-impact-model"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "reading_impact_model" }]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
